--- a/templates/Header.html
+++ b/templates/Header.html
@@ -5,7 +5,7 @@
 		</a>
 	</div>
 	<div class="col-md-6 text-right">
-			{%if 'username' in time_bound %}
+			{%if 'username' not in time_bound %}
 			<a href="{{url_for('showLogin')}}">Click Here to Login </a>
 				
 			{% else %}
